--- a/index.html
+++ b/index.html
@@ -14,15 +14,17 @@
         <div class="video">
             <video class="video_media" src="snake.webm" autoplay muted loop></video>
         </div>
-    </div>
-    <div id="game">
-        <div class="game-header">
-            <div class="game-score">
-                <span class="score-count">1234</span>
+        <div class="intro_content">
+            <div id="game">
+                <div class="game-header">
+                    <div class="game-score">
+                        <span class="score-count">1234</span>
+                    </div>
+                </div>
+                <div class="canvas-wrapper">
+                    <canvas id="game-canvas" width="320" height="400"></canvas>
+                </div>
             </div>
-        </div>
-        <div class="canvas-wrapper">
-            <canvas id="game-canvas" width="320" height="400"></canvas>
         </div>
     </div>
 
